# CogniGPT

./: .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml  setup.sh
cognigpt/action/: basic_action.py  cli_action.py  code_action.py  combined_action.py  gpt_action.py  variable_action.py  wait_action.py
cognigpt/attention/: basic_attention.py
cognigpt/gpt/: answers.py  api.py
cognigpt/gws/: message.py
cognigpt/process/: basic_process.py  mqtt_process.py
config/mosquitto/: mosquitto.conf
examples/deployment/: simpletest.py
examples/dinnerparty/: guest.py  host.py
examples/minicontinuum/: cloud.py  customer.py  edge.py  operator.py
examples/simplecli/: userinput.py
src/gpt/: api.py
src/process/action/: basic_action.py  code_action.py
